chore: include recent versions of an integration (#152)
This change updates /rpc/integrations.get to include up to 500 most
recent versions of an integration.
